# coach

./: .env.example  .gitignore  COACH_NOTES.md  GEMINI.md  GarminConnectConfig.json.example  README.md  goals.md  original_conversation.md  plan.md  pyproject.toml
insights/: aerobic_base.md  climbing_economy_catalog.md  climbing_running_exercise_database.md  hybrid_athlete_mobility_rehab.md  hybrid_nutrition_recovery.md  injury_prevention.md  nutrition.md  sub50_10k_training_plan.md  technique.md
progression/: 2026-W16.md  2026-W17.md  2026-W18.md  2026-W19.md  2026-W20.md  2026-W21.md  2026-W22.md
scripts/: analyze_activity.py  analyze_performance.py  check_health.py  check_recovery.py  coach_dashboard.py  fetch_garmin.py  sync_garmindb.py  upload_workout.py
workouts/: monday_strength.json  sunday_recovery.json  thursday_mobility.json  tuesday_intervals.json
